2018-08-12  Kubo Takehiro <kubo@jiubao.org>
	* test/test_clob.rb: Skip TestCLob#test_github_issue_20 because it
	    takes 4 minutes to test it in my Linux box.

2018-08-12  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/lob.c, test/test_clob.rb: LOB#sync, LOB#sync= and LOB#flush
	    do nothing now. They have not worked by mistake from the beginning
	    because incorrect arguments has been passed to OCILobOpen().
	    Moreover it crashed Oracle 18c server-side processes and caused
	    "ORA-03113: end-of-file on communication channel."
	    (github issue #198)

2018-01-28  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/object.c, lib/oci8/object.rb: Add timestamp with time zone
	    data type support in object type attributes.
	    (github issue #185)
	* test/setup_test_object.sql, test/test_object.rb: Add tests for
	    timestamp and timestamp with time zone.

2018-01-23  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/object.c, ext/oci8/oci8.h, lib/oci8/object.rb:
	    Add timestamp data type support in object type attributes.
	    (github issue #185)

2017-12-27  Kubo Takehiro <kubo@jiubao.org>
	* mkpkg-win32.rb: Remove '-rubygems' in the command line to run tests.
	    `ubygems.rb` was removed in ruby 2.5.

2017-12-27  Kubo Takehiro <kubo@jiubao.org>
	* NEWS: Add changes between 2.2.5 and 2.2.5.1
	* lib/oci8/version.rb: Update to 2.2.5.1
	* mkpkg-win32.rb: Build binary gems for ruby 2.5.

2017-12-27  Kubo Takehiro <kubo@jiubao.org>
	* test/test_clob.rb, test/test_oci8.rb: Suppress `warning: assigned but unused variable`

2017-12-26  Yasuo Honda <yasuo.honda@gmail.com>
	* circle.yml: CI with Ruby 2.5.0
	    (github pull request #182)

2017-12-21  Yasuo Honda <yasuo.honda@gmail.com>
	* test/test_break.rb: Suppress expected exceptions tested with Ruby 2.5
	    (github pull request #181)

2017-12-21  Yasuo Honda <yasuo.honda@gmail.com>
	* test/test_oranumber.rb: Suppress `warning: BigDecimal.new is deprecated`
	    (github pull request #180)
